      Matthew McGowan!
  * merged lp:~mvo/software-center/experimental-fastlist and
    lp:~kiwinote/software-center/experimental-fastlist, this should
    speed up the list rendering quite a lot

  [ Kiwinote ]
  * softwarecenter/backend/channel.py:
    - only show installed packages in the 'for purchase' channel of the
      installed pane (LP: #684356)
  * softwarecenter/view/widgets/searchentry.py:
    - reverse the 'clear' icon for rtl as requested in (LP: #666519)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 02 Dec 2010 10:51:33 +0100

software-center (3.1.3) natty; urgency=low

  [ Michael Vogt ]
  * daily-build.recipe:
    - add daily build recipe
  * test/test_xapian.py:
    - add lowlevel test for "find more similar apps" DB query
  * softwarecenter/db/update.py:
    - generate spell checking data
  * softwarecenter/enums.py:
    - increase DB version (because we now have spell checking in the DB)
  * test/test_xapian.py:
    - add lowlevel test for spell checking feature
  * merged lp:~mvo/software-center/apthistory-pickle-cache to avoid
    (re)parsing most of the apthistory

  [ Kiwinote ]
  * apt-xapian-index-plugin/origin.py (tmp location),
    softwarecenter/db/database.py,
    softwarecenter/db/update.py:
    - make search queries containing '-' work (LP: #497708)
  * po/POTFILES.in:
    mark softwarecenter/view/softwarepane.py for translation (LP: #659955)

  [ Mohamed Amine IL Idrissi ]
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/softwarepane.py:
    - use named arguments for translatable plural strings (LP: #630955)
  * softwarecenter/view/historypane.py:
    - use 'updated' instead of 'upgraded' (LP: #635196)

  [ Gary Lasker ]
  * softwarecenter/app.py:
    - remove unused code; we don't lazy-load entire history pane, rather
      we create the pane UI but then load/parse apthistory on demand
  * po/POTFILES.in:
    - mark login_sso.py, update.py, dependency_dialogs.py and
      purchasedialog.py for translation
